--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@ body {
 h1 {
     color: #025157;
     text-align: center;
+    /*border-style: solid;
+    padding: 10px 5px;
+    border-color: green;*/
 }
 
 p {
@@ -20,4 +23,51 @@ button {
 
 img {
     max-width: 1000px;
+}
+
+.header{
+    /*margin-top: 40px;
+    margin-left: 20px;
+    margin-right: 20px;*/
+    margin: 40px 20px 0; /* */
+    font-size: 0;
+}
+
+li{
+    display: inline;
+}
+
+.header > * { /* Todos los hijos de la clase header, se le aplica el inline block */
+    display: inline-block;
+    font-size: 16px;
+    line-height: 45px;
+    height: 100%;
+    vertical-align: middle;
+}
+
+.logo {
+    width: 15%;
+}
+
+.logo > img{ /*Todos los hijos que contenga logo pero que sean imagenes*/
+    width: 15%;
+}
+
+.navbar{
+    width: 70%;
+    text-align: center;
+    color: #025157;
+    font-weight: 500;
+}
+
+.actions{
+    width: 15%;
+    text-align: right;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.main{
+    margin-top: 140px;
+    text-align: center;
 }
