--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@ body {
 h1 {
     color: #025157;
     text-align: center;
+    font-family: 'Alegreya',serif;
+    font-size: 50px;
     /*border-style: solid;
     padding: 10px 5px;
     border-color: green;*/
