--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,14 @@ h1 {
     border-color: green;*/
 }
 
+h2 {
+    color: #025157;
+}
+
+article > p{
+    color: #343434;
+}
+
 p {
     color: #8b8b8bcc;
     font-family: Verdana;
