--- a/styles.css
+++ b/styles.css
@@ -198,12 +198,35 @@ li {
 
 .features{
     display: grid;
+    background-color: #025157;
     /*grid-auto-columns: repeat(2,1fr);
     grid-auto-rows: repeat(2,330px);*/
     /*grid-auto-flow: column;*/
-    grid-template: repeat(2,1fr) / repeat(2,1fr);   
+    grid-template: repeat(2,1fr) / repeat(2,1fr);
+    grid-column-gap: 25px;
+    grid-row-gap: 25px;
+    padding: 90px 180px;   
     /*height: 660px;*/
 }
+
+.feature-box{
+    display: flex;
+    /*flex-direction: column;*/
+    background-color: #fff;
+    padding: 20px;
+    /*margin: 20px 20px 20px;*/    
+}
+
+
+.features a{
+    color: #67b54b;
+}
+
+.feature-image{
+    margin-top: 50px;
+    margin-right: -20px;
+}
+
 
 iframe {
     display: flex;
