--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,8 @@ button {
     
 }
 
-img {
-    max-width: 1000px;
+.banner img {
+    max-width: 100%;
 }
 
 .header {
@@ -65,7 +65,7 @@ li {
 }
 
 .logo {
-    width: 15%;
+    width: 30%;
 }
 
 .logo>img {
@@ -80,6 +80,7 @@ li {
     font-style: normal;
     font-family: sans-serif;
     color: #025157;
+    background-color:#fffbf7;
     font-weight: 500;
 }
 
@@ -233,6 +234,42 @@ iframe {
     margin: auto;
 }
 
+.success-stories {
+    background-color: #A1D683;
+    padding: 5% 15%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .success-stories .overview {
+    flex: 2;
+    padding-right: 100px;
+  }
+  .success-stories .overview h2 {
+    font-family: "Alegreya", serif;
+    font-size: 51px;
+    line-height: 61px;
+    color: #025157;
+  }
+  .success-stories .overview p {
+    color: #343434;
+    font-size: 18px;
+    line-height: 1.5;
+    margin-bottom: 1rem;
+  }
+  .success-stories .overview button {
+    font-size: 14px;
+    padding: 12px 12px 6px 12px;
+    border-radius: 8px;
+    height: 45px;
+    font-weight: 600;
+    margin-left: 0;
+  }
+  .success-stories .overview img {
+    width: 500px;
+    max-width: 100%;
+  }
+  
 /* Dispositivos moviles en vista viewport (vertical) */
 @media (max-width: 575px){
     /*.navbar,
@@ -245,7 +282,7 @@ iframe {
     .main{
         margin-top: 100px;
     }
-    .banner > *{
+    .banner > img{
         width: 100%;
     }
     .publish > form{
