--- a/styles.css
+++ b/styles.css
@@ -1,113 +1,131 @@
 body {
-    background-color: #fffbf7;
+  background-color: #fffbf7;
 }
 
 h1 {
-    color: #025157;
-    text-align: center;
-    font-family: 'Alegreya', serif;
-    font-size: 50px;
-    /*border-style: solid;
+  color: #025157;
+  text-align: center;
+  font-family: "Alegreya", serif;
+  font-size: 50px;
+  /*border-style: solid;
     padding: 10px 5px;
     border-color: green;*/
 }
 
 h2 {
-    color: #025157;
+  color: #025157;
 }
 
 /*article {
     margin: 20px;
 }*/
 
-article>p {
-    color: #343434;
+article > p {
+  color: #343434;
 }
 
 p {
-    color: #8b8b8bcc;
-    font-family: Verdana;
-    font-size: 20px;
+  color: #8b8b8bcc;
+  font-family: Verdana;
+  font-size: 20px;
 }
 
 button {
-    color: #fff;
-    background-color: #025157;
-    
+  color: #fff;
+  background-color: #025157;
 }
 
 .banner img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
-.header {
-    /*margin-top: 40px;
+/*.header {
+  /*margin-top: 40px;
     margin-left: 20px;
-    margin-right: 20px;*/
-    margin: 40px 20px 0;
-    /* */
-    font-size: 0;
+    margin-right: 20px;
+  margin: 40px 20px 0;
+  
+  font-size: 0;
 }
+*/
+/*li {
+  display: inline;
+  margin: 0 25px;
+  color: #025157;
+}*/
 
-li {
-    display: inline;
-    margin: 0 25px;
-    color: #025157;
-}
-
-.header>* {
-    /* Todos los hijos de la clase header, se le aplica el inline block */
-    display: inline-block;
-    font-size: 16px;
-    line-height: 45px;
-    height: 100%;
-    vertical-align: middle;
+.header > * {
+  /* Todos los hijos de la clase header, se le aplica el inline block */
+  display: inline-block;
+  font-size: 16px;
+  line-height: 45px;
+  height: 100%;
+  vertical-align: middle;
 }
 
 .logo {
-    width: 30%;
+  width: 15%;
 }
 
-.logo>img {
-    /*Todos los hijos que contenga logo pero que sean imagenes*/
-    width: 15%;
+.logo > img {
+  /*Todos los hijos que contenga logo pero que sean imagenes*/
+  width: 15%;
 }
+
+/*.navbar {
+  width: 70%;
+  height: 45px;
+  text-align: left;
+  font-style: normal;
+  font-family: sans-serif;
+  color: #025157;
+  background-color: #fffbf7;
+  font-weight: 500;
+}*/
 
 .navbar {
-    width: 70%;
-    height: 45px;
-    text-align: left;
-    font-style: normal;
-    font-family: sans-serif;
-    color: #025157;
-    background-color:#fffbf7;
-    font-weight: 500;
+  background-color: #fffbf7;
+}
+
+.navbar-light .nav-item .nav-link {
+  color: #025157;
+}
+
+.navbar-light .navbar-toggler {
+  border-color: #025157;
+}
+
+.navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgb(3, 81, 77)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 .actions {
-    width: 15%;
-    text-align: left;
-    font-size: 14px;
-    font-weight: 600;
-
+  text-align: right;
+  font-weight: 600;
+  font-size: 14px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
-.actions>a {
-    margin: 10px;
-    color: #67b54b;
+.actions a {
+  margin: 10px;
+  color: #67b54b;
 }
 
-.actions>button {
-    color: #fff;
-    background-color: #67b54b;
-    padding: 12px 14px;
-    border: 0px;
-    border-radius: 5px;
+.actions button {
+  color: white;
+  background-color: #67b54b;
+  padding-left: 14px;
+  padding-right: 14px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border: 0;
+  border-radius: 5px;
 }
 
 .main {
-    margin-top: 185px;
-    text-align: center;
+  margin-top: 185px;
+  text-align: center;
 }
 
 /*form {
@@ -115,57 +133,57 @@ li {
 }*/
 
 .publish {
-    margin-left: 30px;
+  margin-left: 30px;
 }
 
 .publish h2 {
-    font-family: "Alegreya", serif;
-    font-size: 40px;
-    line-height: 48px;
-    color: #025157;
+  font-family: "Alegreya", serif;
+  font-size: 40px;
+  line-height: 48px;
+  color: #025157;
 }
 
-.publish>p {
-    font-size: 16px;
-    color: #343434;
-    line-height: 1.5;
-    margin-bottom: 20px;
+.publish > p {
+  font-size: 16px;
+  color: #343434;
+  line-height: 1.5;
+  margin-bottom: 20px;
 }
 
-.publish>form {
-    display: flex;
-    flex-direction: column;
+.publish > form {
+  display: flex;
+  flex-direction: column;
 }
 
-.publish>form p {
-    color: #025157;
-    margin-top: 18px;
+.publish > form p {
+  color: #025157;
+  margin-top: 18px;
 }
 
 .promo {
-    display: flex;
-    width: 70%;
-    margin: 80px auto;
-    align-items: center;
+  display: flex;
+  width: 70%;
+  margin: 80px auto;
+  align-items: center;
 }
 
 .explanatoryVideo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .explanatoryVideo img {
-    width: 120px;
-    margin-top: 10px;
+  width: 120px;
+  margin-top: 10px;
 }
 
 .fixed-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: #fffbf7;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #fffbf7;
 }
 
 /*
@@ -197,149 +215,238 @@ li {
 }
 */
 
-.features{
-    display: grid;
-    background-color: #025157;
-    /*grid-auto-columns: repeat(2,1fr);
+.features {
+  display: grid;
+  background-color: #025157;
+  /*grid-auto-columns: repeat(2,1fr);
     grid-auto-rows: repeat(2,330px);*/
-    /*grid-auto-flow: column;*/
-    grid-template: repeat(2,1fr) / repeat(2,1fr);
-    grid-column-gap: 25px;
-    grid-row-gap: 25px;
-    padding: 90px 180px;   
-    /*height: 660px;*/
+  /*grid-auto-flow: column;*/
+  grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+  grid-column-gap: 25px;
+  grid-row-gap: 25px;
+  padding: 90px 180px;
+  /*height: 660px;*/
 }
 
-.feature-box{
-    display: flex;
-    /*flex-direction: column;*/
-    background-color: #fff;
-    padding: 20px;
-    /*margin: 20px 20px 20px;*/    
+.feature-box {
+  display: flex;
+  /*flex-direction: column;*/
+  background-color: #fff;
+  padding: 20px;
+  /*margin: 20px 20px 20px;*/
 }
 
-
-.features a{
-    color: #67b54b;
+.features a {
+  color: #67b54b;
 }
 
-.feature-image{
-    margin-top: 50px;
-    margin-right: -20px;
+.feature-image {
+  margin-top: 50px;
+  margin-right: -20px;
 }
-
 
 iframe {
-    display: flex;
-    margin: auto;
+  display: flex;
+  margin: auto;
 }
 
 .success-stories {
-    background-color: #A1D683;
-    padding: 5% 15%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
-  .success-stories .overview {
-    flex: 2;
-    padding-right: 100px;
-  }
-  .success-stories .overview h2 {
-    font-family: "Alegreya", serif;
-    font-size: 51px;
-    line-height: 61px;
-    color: #025157;
-  }
-  .success-stories .overview p {
-    color: #343434;
-    font-size: 18px;
-    line-height: 1.5;
-    margin-bottom: 1rem;
-  }
-  .success-stories .overview button {
-    font-size: 14px;
-    padding: 12px 12px 6px 12px;
-    border-radius: 8px;
-    height: 45px;
-    font-weight: 600;
-    margin-left: 0;
-  }
-  .success-stories .overview img {
-    width: 500px;
-    max-width: 100%;
-  }
-  
+  background-color: #a1d683;
+  padding: 5% 15%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.success-stories .overview {
+  flex: 2;
+  padding-right: 100px;
+}
+.success-stories .overview h2 {
+  font-family: "Alegreya", serif;
+  font-size: 51px;
+  line-height: 61px;
+  color: #025157;
+}
+.success-stories .overview p {
+  color: #343434;
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 1rem;
+}
+.success-stories .overview button {
+  font-size: 14px;
+  padding: 12px 12px 6px 12px;
+  border-radius: 8px;
+  height: 45px;
+  font-weight: 600;
+  margin-left: 0;
+}
+.success-stories .overview img {
+  width: 500px;
+  max-width: 100%;
+}
+.success-stories .card {
+  max-width: 370px;
+  width: 100%;
+  min-height: 600px;
+  margin: 0 auto;
+}
+/* Con object-fit, hacemos que la imagen se ajuste a la medida de su contenedor y limitamos su alto */
+.success-stories .card img {
+  max-height: 50vh;
+  object-fit: cover;
+}
+/* Agregamos position: relative para recibir un elemento con position:absolute más adelante */
+.success-stories .card .card-body {
+  max-width: 370px;
+  width: 100%;
+  position: relative;
+  padding: 40px 1rem 1rem;
+}
+
+.success-stories .card .card-body h2 {
+  color: #025157;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 20px;
+  margin-bottom: 12px;
+  font-family: "Slabo 27px", serif;
+}
+.success-stories .card .card-body h3 {
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 30px;
+  margin-bottom: 20px;
+}
+
+.success-stories .card .card-body .results {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.success-stories .card .card-body .results img {
+  width: 40px;
+  margin-right: 20px;
+}
+
+.success-stories .card .card-body .results p {
+  margin: 0;
+}
+.success-stories .card .card-footer {
+  background-color: #ffffff;
+  color: #fff;
+  border: none;
+}
+.success-stories .card .card-footer button {
+  display: block;
+  margin-left: 0;
+  border-radius: 5px;
+  font-size: 13;
+  font-weight: 600;
+  padding: 12px 20px;
+  width: 100%;
+  background-color: #025157;
+  color: #fff;
+  border: none;
+}
+/* Aqui hacemos un círculo con CSS! Este se posicionará en el margen superior de .card-body */
+.success-stories .card .card-body .card-circle {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: -45px;
+  right: 20px;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  padding: 0%;
+}
+/* Cada círculo tiene su propio color. Verifica qué significa este selector: .card-circle.everly */
+.success-stories .card .card-body .card-circle.everly {
+  background-color: #f9da73;
+  border: 5px solid #f9da73;
+}
+
+.success-stories .card .card-body .card-circle.summit {
+  background-color: #81d742;
+  border: 5px solid #81d742;
+}
+
+.success-stories .card .card-body .card-circle.mambe {
+  background-color: #ef7179;
+  border: 5px solid #ef7179;
+}
+/* Los círculos deben recibir la imagen y ajustarla al tamaño */
+.success-stories .card .card-body .card-circle.everly img,
+.success-stories .card .card-body .card-circle.summit img,
+.success-stories .card .card-body .card-circle.mambe img {
+  object-fit: contain;
+  width: 100%;
+}
+
 /* Dispositivos moviles en vista viewport (vertical) */
-@media (max-width: 575px){
-    /*.navbar,
-    .actions{
-        display: none;
-    }*/
-    h1 {
-        font-size: 30px;
-    }
-    .main{
-        margin-top: 100px;
-    }
-    .banner > img{
-        width: 100%;
-    }
-    .publish > form{
-        flex-direction: column;
-    }
-    .publish > form > div{
-        height: 50px;
-        margin-top: 10px;
-    }
-    .publish> form > div > input{
-        width: 65%;
-    }
-    .promo {
-        flex-direction: column;
-        max-width: 90%;
-    }
-    .explanatoryVideo{
-        width: 100%;
-    }
-    .publish{
-        margin-top: 10px;
-    }
-    .publish > h3{
-        font-size: 25px;
-        line-height: 1.2;
-    }
-    .features{
-        /** Ambas soluciones son correctas **/
-        display: flex;
-        flex-direction: column;      
-        padding: 90px; 
-        /*grid-template: repeat(4,1fr) / 1fr; 
+@media (max-width: 575px) {
+  h1 {
+    font-size: 30px;
+  }
+  .main {
+    margin-top: 100px;
+  }
+  .banner > img {
+    width: 100%;
+  }
+  .publish > form {
+    flex-direction: column;
+  }
+  .publish > form > div {
+    height: 50px;
+    margin-top: 10px;
+  }
+  .publish > form > div > input {
+    width: 65%;
+  }
+  .promo {
+    flex-direction: column;
+    max-width: 90%;
+  }
+  .explanatoryVideo {
+    width: 100%;
+  }
+  .publish {
+    margin-top: 10px;
+  }
+  .publish > h3 {
+    font-size: 25px;
+    line-height: 1.2;
+  }
+  .features {
+    /** Ambas soluciones son correctas **/
+    display: flex;
+    flex-direction: column;
+    padding: 90px;
+    /*grid-template: repeat(4,1fr) / 1fr; 
         padding: 0;*/
-    }
-    iframe{
-        width: 100%;
-        height: 100%;
-        padding: 5%;
-    }
+  }
+  iframe {
+    width: 100%;
+    height: 100%;
+    padding: 5%;
+  }
 }
 
 /* Dispositivos pequeños en model landscape (horizontal) */
-@media (min-width: 576px) and (max-width:767px){
-
+@media (min-width: 576px) and (max-width: 767px) {
 }
 
 /** dispositivos medianos (tablets) */
 @media (min-width: 768px) and (max-width: 991px) {
-
 }
 
 /** dispositivos grandes (desktops) */
 @media (min-width: 992px) and (max-width: 1199px) {
-
 }
 
 /** dispositivos extra grandes (monitores grandes, tvs) */
 @media (min-width: 1200px) {
-
 }
